lesson3-hw/lesson3-hw/creds/k8s/nginx-pod-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-secrets
  namespace: creds
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: db-creds-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: db-creds-volume
    secret:
      secretName: db-creds
