lesson3-hw/lesson3-hw/creds/k8s/nginx-password.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-password
  namespace: creds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-password
  template:
    metadata:
      labels:
        app: nginx-password
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: password-secret
          mountPath: /usr/share/nginx/html/password
          readOnly: true
      volumes:
      - name: password-secret
        secret:
          secretName: db-creds
          items:
          - key: password
            path: password

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-password
  namespace: creds
spec:
  selector:
    app: nginx-password
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
